kubernetes/kafka-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ip-service
spec:
  type: ClusterIP
  selector:
    component: kafka
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka
  template:
    metadata:
      labels:
        component: kafka
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka
        ports:
          - containerPort: 9092
